force-app/main/default/objects/Athletic_Ticket__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Athletic Tickets</relationshipLabel>
    <relationshipName>Athletic_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>