force-app/main/default/objects/Athletic_Ticket__c/fields/Sport__c.field-meta.xml
<CustomField>
    <fullName>Sport__c</fullName>
    <label>Sport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BB</fullName>
                <label>Baseball</label>
            </value>
            <value>
                <fullName>FB</fullName>
                <label>Football</label>
            </value>
            <value>
                <fullName>HO</fullName>
                <label>Hockey</label>
            </value>
            <value>
                <fullName>MB</fullName>
                <label>Men&apos;s Basketball</label>
            </value>
            <value>
                <fullName>SO</fullName>
                <label>Soccer</label>
            </value>
            <value>
                <fullName>VB</fullName>
                <label>Volleyball</label>
            </value>
            <value>
                <fullName>WB</fullName>
                <label>Women&apos;s Basketball</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>