force-app/main/default/objects/Athletic_Ticket__c/fields/Ticket_Parking_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Parking_Type__c</fullName>
    <label>Ticket/Parking Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BO</fullName>
                <label>Bowl Game</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Complimentary</label>
            </value>
            <value>
                <fullName>LA</fullName>
                <label>Lottery Air Force</label>
            </value>
            <value>
                <fullName>LB</fullName>
                <label>Lottery Arizona State</label>
            </value>
            <value>
                <fullName>LZ</fullName>
                <label>Lottery Army</label>
            </value>
            <value>
                <fullName>L8</fullName>
                <label>Lottery Ball State</label>
            </value>
            <value>
                <fullName>LS</fullName>
                <label>Lottery Boston College</label>
            </value>
            <value>
                <fullName>M2</fullName>
                <label>Lottery Bowling Green</label>
            </value>
            <value>
                <fullName>LC</fullName>
                <label>Lottery BYU</label>
            </value>
            <value>
                <fullName>M8</fullName>
                <label>Lottery California</label>
            </value>
            <value>
                <fullName>M5</fullName>
                <label>Lottery Cincinnati</label>
            </value>
            <value>
                <fullName>LT</fullName>
                <label>Lottery Clemson</label>
            </value>
            <value>
                <fullName>L1</fullName>
                <label>Lottery Duke</label>
            </value>
            <value>
                <fullName>LM</fullName>
                <label>Lottery Florida State</label>
            </value>
            <value>
                <fullName>L6</fullName>
                <label>Lottery Georgia</label>
            </value>
            <value>
                <fullName>LU</fullName>
                <label>Lottery Georgia Tech</label>
            </value>
            <value>
                <fullName>LN</fullName>
                <label>Lottery Louisville</label>
            </value>
            <value>
                <fullName>M7</fullName>
                <label>Lottery Marshall</label>
            </value>
            <value>
                <fullName>L2</fullName>
                <label>Lottery Miami</label>
            </value>
            <value>
                <fullName>L7</fullName>
                <label>Lottery Miami (Ohio)</label>
            </value>
            <value>
                <fullName>LD</fullName>
                <label>Lottery Michigan</label>
            </value>
            <value>
                <fullName>LE</fullName>
                <label>Lottery Michigan State</label>
            </value>
            <value>
                <fullName>LF</fullName>
                <label>Lottery Navy</label>
            </value>
            <value>
                <fullName>L4</fullName>
                <label>Lottery NC State</label>
            </value>
            <value>
                <fullName>L3</fullName>
                <label>Lottery Nevada</label>
            </value>
            <value>
                <fullName>M1</fullName>
                <label>Lottery New Mexico</label>
            </value>
            <value>
                <fullName>LO</fullName>
                <label>Lottery North Carolina</label>
            </value>
            <value>
                <fullName>LP</fullName>
                <label>Lottery Northwestern</label>
            </value>
            <value>
                <fullName>M6</fullName>
                <label>Lottery Ohio State</label>
            </value>
            <value>
                <fullName>LG</fullName>
                <label>Lottery Oklahoma</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>